Fixed issue where two group names could be called different things but appear the same by having different whitespace #fix

--- a/portfolio/src/main/resources/static/css/styles.css
+++ b/portfolio/src/main/resources/static/css/styles.css
@@ -23,6 +23,10 @@ section {
     align-items: center;
 }
 
+.showExtraWhitespace {
+    white-space: pre;
+}
+
 
 /*Colours*/
 
